--- a/css/container.css
+++ b/css/container.css
@@ -1,6 +1,6 @@
   .container {
       margin: 0 auto;
-      min-width: auto;
+      min-width: 190px;
       max-width: 600px;
       background-color: rgb(236, 236, 236);
       margin-top: 2px;
@@ -46,6 +46,10 @@
       border-style: none;
       padding: 5px;
       margin: auto 10px 10px 10px
+  }
+  
+  .container__button:hover {
+      background-color: rgb(4, 173, 173);
   }
   
   .container--listHeader {
