--- a/css/list.css
+++ b/css/list.css
@@ -2,6 +2,7 @@
     display: flex;
     border-bottom: 1.5px solid rgb(236, 236, 236);
     padding: 5px 0px 5px 0px;
+    overflow-wrap: anywhere;
 }
 
 .list__item--content {
