--- a/css/container.css
+++ b/css/container.css
@@ -4,6 +4,9 @@
       max-width: 600px;
       background-color: rgb(236, 236, 236);
       margin-top: 2px;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 14px;
+      font-weight: bold;
   }
   
   .container__mainHeader {
@@ -14,8 +17,9 @@
   .container__formHeader {
       background-color: white;
       font-family: 'Francois One', sans-serif;
-      padding: 10px 10px 0px 10px;
+      padding: 10px 10px 10px 10px;
       font-size: 20px;
+      margin-bottom: 2px;
   }
   
   .container__form {
@@ -31,21 +35,24 @@
       flex-basis: 70%;
       flex-shrink: 1;
       flex-grow: 1;
+      min-height: 34px;
       min-width: 60px;
-      margin: 0px 10px 10px 10px;
+      margin: auto 10px 10px 10px;
+      padding-left: 8px;
+      border: 1px solid rgb(236, 236, 236);
+      font-weight: bold;
   }
   
   .container__submitButton {
       display: flex;
-      flex-basis: auto;
       flex-grow: 1;
       justify-content: center;
       color: white;
-      font-family: 'Montserrat', sans-serif;
       background-color: teal;
       border-style: none;
-      padding: 5px;
-      margin: auto 10px 10px 10px
+      padding: 9px 3px;
+      margin: auto 10px 10px 10px;
+      font-weight: bold;
   }
   
   .container__submitButton:hover {
