--- a/css/container.css
+++ b/css/container.css
@@ -20,6 +20,7 @@
       padding: 10px 10px 10px 10px;
       font-size: 20px;
       margin-bottom: 2px;
+      font-weight: normal;
   }
   
   .container__form {
@@ -65,6 +66,7 @@
       padding: 10px;
       font-size: 20px;
       margin-top: 10px;
+      font-weight: normal;
   }
   
   .container__list {
