--- a/css/container.css
+++ b/css/container.css
@@ -2,75 +2,102 @@
       margin: 0 auto;
       min-width: 190px;
       max-width: 600px;
-      background-color: rgb(236, 236, 236);
-      margin-top: 2px;
       font-family: 'Montserrat', sans-serif;
       font-size: 14px;
-      font-weight: bold;
   }
   
   .container__mainHeader {
       font-family: 'Francois One', sans-serif;
-      font-weight: normal;
   }
   
-  .container__formHeader {
+  .container__header {
       background-color: white;
-      font-family: 'Francois One', sans-serif;
       padding: 10px 10px 10px 10px;
-      font-size: 20px;
-      margin-bottom: 2px;
-      font-weight: normal;
+      font-size: 18px;
+      font-weight: bold;
   }
   
-  .container__form {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+  .container__section {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      grid-gap: 15px;
+      margin-bottom: 5px;
+      margin-top: 2px;
       background-color: white;
-      padding-top: 10px;
+      padding: 10px;
+  }
+  
+  @media(max-width:600px) {
+      .container__section {
+          grid-template-columns: 1fr;
+      }
   }
   
   .container__inputField {
-      display: flex;
-      flex-basis: 70%;
-      flex-shrink: 1;
-      flex-grow: 1;
-      min-height: 34px;
-      min-width: 60px;
-      margin: auto 10px 10px 10px;
-      padding-left: 8px;
+      padding: 7px;
       border: 1px solid rgb(236, 236, 236);
-      font-weight: bold;
+      min-width: 160px;
   }
   
   .container__submitButton {
-      display: flex;
-      flex-grow: 1;
-      justify-content: center;
       color: white;
       background-color: teal;
       border-style: none;
-      padding: 9px 3px;
-      margin: auto 10px 10px 10px;
-      font-weight: bold;
+      padding: 7px;
+      transition: .5s;
+      font-size: 12px;
   }
   
   .container__submitButton:hover {
       background-color: rgb(4, 173, 173);
+      transform: scale(1.03);
   }
   
-  .container__listHeader {
+  .container__section--list {
       background-color: white;
-      font-family: 'Francois One', sans-serif;
-      padding: 10px;
-      font-size: 20px;
-      margin-top: 10px;
-      font-weight: normal;
+      padding: 18px 10px;
+      margin-top: 2px;
   }
   
-  .container__list {
-      background-color: white;
+  .section {
+      display: grid;
+      grid-template-columns: 1fr auto auto;
+  }
+  
+  @media(max-width:600px) {
+      .section {
+          grid-template-columns: 1fr;
+      }
+  }
+  
+  .container__header--buttons {
+      display: grid;
+      grid-gap: 5px;
       padding: 10px;
-      margin: 2px auto;
+      background-color: white;
+  }
+  
+  @media(max-width:600px) {
+      .container__header--buttons {
+          grid-template-columns: 1fr;
+          align-items: center;
+      }
+  }
+  
+  .manageTasksButton {
+      border: none;
+      color: teal;
+      background-color: white;
+      font-size: 12px;
+      font-weight: bold;
+      padding: 0;
+      transition: 0.5s;
+  }
+  
+  .manageTasksButton:hover {
+      color: rgb(4, 173, 173);
+  }
+  
+  .manageTasksButton:disabled {
+      color: rgb(176, 180, 180);
   }
